[gd_scene load_steps=3 format=3 uid="uid://cuxotd7e5mmye"]

[ext_resource type="Script" path="res://Scripts/Components/hitbox_component.gd" id="1_5tph6"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ust7t"]
radius = 0.268666

[node name="HitboxComponent" type="Area3D"]
script = ExtResource("1_5tph6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_ust7t")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
